--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "angular-seed",
+  "name": "wallet-app",
   "private": true,
-  "version": "0.0.0",
-  "description": "A starter project for AngularJS",
-  "license": "MIT",
+  "version": "1.0.0",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/ankova/WalletApp"
+  },
   "devDependencies": {
-    "karma": "~0.10",
-    "protractor": "^1.1.1",
-    "http-server": "^0.6.1",
     "bower": "^1.3.1",
-    "shelljs": "^0.2.6",
-    "karma-junit-reporter": "^0.2.2"
+    "grunt": "^0.4.5",
+    "grunt-bower-concat": "^0.4.0",
+    "grunt-contrib-less": "^1.0.0",
+    "http-server": "^0.6.1",
+    "protractor": "^1.1.1",
+    "grunt-contrib-watch": "~0.6.1",
+    "jit-grunt": "~0.7.0"
   },
   "scripts": {
     "postinstall": "bower install",
